etc/ufw/before.rules
*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]

## Clamp TCP MSS to PMTU
## -A FORWARD -o eth0 -p tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu

_MASQS_CLAMP_

COMMIT

*nat
:PREROUTING ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-F

## MASQS LAN to WAN
## # name123 00:00:00:00:00:00
## -A POSTROUTING -s 192.168.123.0/24 -o eth0 -j MASQUERADE
## # name234 00:00:00:00:00:00
## -A POSTROUTING -s 192.168.234.2 -o eth0 -j MASQUERADE

_MASQS_NAT_RULES_

COMMIT

*filter
:ufw-before-input - [0:0]
:ufw-before-output - [0:0]
:ufw-before-forward - [0:0]
:ufw-not-local - [0:0]

## LO
-A ufw-before-input -i lo -j ACCEPT
-A ufw-before-output -o lo -j ACCEPT

-A ufw-before-input -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A ufw-before-output -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A ufw-before-forward -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A ufw-before-input -m conntrack --ctstate INVALID -j ufw-logging-deny
-A ufw-before-input -m conntrack --ctstate INVALID -j DROP
-A ufw-before-input -p tcp --tcp-flags ALL NONE -j DROP
-A ufw-before-input -p tcp --tcp-flags ALL ALL -j DROP
-A ufw-before-input -p tcp --tcp-flags ALL SYN,FIN -j DROP

## MASQS BLOCK WAN to LAN
## -A ufw-before-forward -i eth0 -m conntrack --ctstate NEW -j DROP

_MASQS_WAN_RULES_

## MASQS BLOCK LAN to LAN
## -A ufw-before-forward -s 192.168.123.123 -o eth0 -j ACCEPT
## -A ufw-before-forward -s 192.168.123.123 -j DROP

## MASQS ACCEPT LAN to LO
## -A ufw-before-input -s 192.168.123.234 -p tcp --dport 22 -j ACCEPT
## MASQS ACCEPT WAN to LO
## -A ufw-before-input -i eth0 -p tcp --dport 12345 -j ACCEPT
_MASQS_LAN_RULES_


## MASQS ACCEPT LAN defaults
## -A ufw-before-input -i eth123 -p udp --sport 68 --dport 67 -j ACCEPT
## -A ufw-before-input -i eth123 -p udp --dport 53 -j ACCEPT
## -A ufw-before-input -i eth123 -p tcp --dport 53 -j ACCEPT
## -A ufw-before-input -i eth123 -p udp --dport 123 -j ACCEPT
## -A ufw-before-input -i eth123 -p icmp --icmp-type echo-request -j ACCEPT

_MASQS_DEFAULT_RULES_

## MASQS MDNS
## -A ufw-before-input -i eth123 -p udp -d 224.0.0.251 --dport 5353 -j ACCEPT

_MASQS_MDNS_RULES_

-A ufw-before-input -p icmp --icmp-type destination-unreachable -j DROP
-A ufw-before-input -p icmp --icmp-type time-exceeded -j DROP
-A ufw-before-input -p icmp --icmp-type parameter-problem -j DROP
-A ufw-before-input -p icmp --icmp-type echo-request -j DROP
-A ufw-before-forward -p icmp --icmp-type destination-unreachable -j ACCEPT
-A ufw-before-forward -p icmp --icmp-type time-exceeded -j ACCEPT
-A ufw-before-forward -p icmp --icmp-type parameter-problem -j ACCEPT
-A ufw-before-forward -p icmp --icmp-type echo-request -j ACCEPT

## DROP the rest
## -A ufw-before-input -i eth123 -j DROP

_MASQS_LAN_DROPS_

-A ufw-before-input -j ufw-not-local
-A ufw-not-local -m addrtype --dst-type LOCAL -j RETURN
-A ufw-not-local -m addrtype --dst-type MULTICAST -j RETURN
-A ufw-not-local -m addrtype --dst-type BROADCAST -j RETURN
-A ufw-not-local -m limit --limit 3/min --limit-burst 10 -j ufw-logging-deny
-A ufw-not-local -j DROP

COMMIT
